Fix spacing on the CJS.

--- a/app/styles/components/code-snippet/_mixins.scss
+++ b/app/styles/components/code-snippet/_mixins.scss
@@ -24,6 +24,8 @@
   &:before {
     background-image: $voxel-code-snippet__icon__background-image--html;
   }
+
+  margin-top: 0;
 }
 
 @mixin voxel-code-snippet--js() {
